# Stackformer

./: .gitignore  BACKWARDS_COMPATIBILITY.md  CHANGELOG.md  INDUSTRIAL_ASSESSMENT.md  LICENSE  README.md  __init__.py  pyproject.toml  setup.py  trainer.py
.github/workflows/: ci.yml  core-tests.yml  gpu-tests.yml  integration-tests.yml  model-tests.yml  publish-python-package.yml  python-package.yml  trainer-tests.yml
Stackformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ci/kaggle/: kernel-metadata.template.json  run_gpu_tests.py  test_runtime.py
docs/developer_docs/: architecture.md
docs/user_docs/: installation.md
examples/: simple_train.py  simple_trainer.py  simple_trainer_v2.py  train_ddp.py
models/: GPT_2.py
modules/: Attention.py  Normalization.py  position_embedding.py  trainer.py
src/: Attention.py  Feed_forward.py  Normalization.py  __init__.py  position_embedding.py  tokenizer.py
stackformer/: __init__.py  config.py  generate.py  metrics.py  trainer.py
stackformer/amp/: __init__.py  scaler.py
stackformer/distributed/: __init__.py  ddp.py
stackformer/engine/: __init__.py  checkpoint.py  engine.py  state.py  trainer.py
stackformer/language/: __init__.py  decoder.py  encoder.py  encoder_decoder.py
stackformer/legacy/: __init__.py
stackformer/logging/: __init__.py  csv_logger.py  logger.py  metrics.py  tensorboard_logger.py  wandb_logger.py  wb_logger.py
stackformer/models/: GPT_2.py  Google.py  Meta.py  OpenAI.py  Transformer.py  __init__.py
stackformer/modules/: Attention.py  Feed_forward.py  Masking.py  Normalization.py  __init__.py  layer.py  mask.py  position_embedding.py  tokenizer.py
stackformer/optim/: __init__.py  factories.py  loss_fn.py
stackformer/training/: __init__.py  loops.py
stackformer/utils/: __init__.py  attn_utils.py  device.py  ff_utils.py  utils.py
stackformer/vision/: __init__.py  segformer.py  vit.py
stackformer/vision_models/: Classification.py  vit.py
tests/: _test_utils.py  attention.ipynb  conftest.py  normalization.ipynb  test_attention.py  test_checkpoint.py  test_distributed.py  test_engine.py  test_ff.py  test_logging.py  test_metrics.py  test_models.py  test_modules.py  test_normalization.py  test_position_embedding.py  test_trainer.py  test_vision.py  tokenizer_test.ipynb
tests/integration/: test_custom_model_training.py  test_full_stackformer_stack.py  test_model_save_load.py  test_model_training.py  test_parameter_updates.py  test_pipeline.py  test_training_loop.py
tests/models/: test_generation.py  test_generation_length.py  test_generation_stability.py  test_google_model.py  test_kv_cache_generation_parity.py  test_meta_model.py  test_openai_model.py  test_save_after_training.py  test_save_load.py  test_transformer.py
tests/modules/: test_attention.py  test_attention_equivalence.py  test_causal_mask_leakage.py  test_feedforward.py  test_kv_cache.py  test_kv_cache_equivalence.py  test_kv_cache_growth.py  test_normalization.py  test_position_embedding.py  test_sliding_window_mask.py
tests/sanity/: test_determinism.py  test_gpu_smoke.py  test_imports.py
tests/trainer/: test_checkpoint.py  test_engine.py  test_logging.py  test_metrics.py  test_trainer_loop.py
tests/utils/: test_utils.py
