[project]
name = "Stackformer"
version = "0.1.7"
description = "Modular transformer blocks built in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [
  { name = "Gurumurthy", email = "gurumurthy.00300@gmail.com" }
]

dependencies = [
  "torch>=2.0,<2.7",
  "numpy>=1.23,<3.0",
  "tqdm>=4.5,<5.0",
  "tensorboard>=2.14,<3.0",
  "wandb>=0.17,<1.0"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0"
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0"
]

[project.urls]
Repository = "https://github.com/Gurumurthy30/Stackformer"
Releases = "https://github.com/Gurumurthy30/Stackformer/releases"
Issue-Tracker = "https://github.com/Gurumurthy30/Stackformer/issues"
Discussions = "https://github.com/Gurumurthy30/Stackformer/discussions"

[tool.setuptools.packages.find]
include = ["stackformer*"]
exclude = ["assets*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
stackformer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
